# arch-local

./: .gitignore  README.md  cargo-arch.sh  compose.yaml  validator.sh
arch-data/: .gitignore  caller.json
arch-data/bootnode/: p2p_identity  peer_id  secret_key  secret_share
arch-data/bootnode/rocksdb/: 000008.sst  000009.sst  000010.sst  000011.sst  000012.sst  000013.sst  IDENTITY  LOG  LOG.old.1722876182337021  LOG.old.1722876573008408  MANIFEST-000019
arch-data/leader/: peer_id
arch-data/leader/testnet/: arch-secret
arch-data/node/: secret_key  secret_share
arch-data/node/rocksdb/: 000008.sst  000009.sst  000010.sst  000011.sst  000012.sst  000013.sst  000018.sst  000019.sst  000020.sst  000021.sst  000022.sst  000023.sst  IDENTITY  LOG  LOG.old.1722876182500619  LOG.old.1722876573200897  MANIFEST-000025  OPTIONS-000017
arch-data/validator-1/: peer_id
arch-data/validator-1/testnet/: arch-secret
arch-data/validator-2/: peer_id
arch-data/validator-2/testnet/: arch-secret
arch-data/zkvm/: secret_key  secret_share
arch-data/zkvm/rocksdb/: 000008.sst  000009.sst  000010.sst  000011.sst  000012.sst  000013.sst  000018.sst  000019.sst  000020.sst  000021.sst  000022.sst  000023.sst  IDENTITY  LOG  LOG.old.1722876182524481  LOG.old.1722876573200303  MANIFEST-000025
bitcoin/: Dockerfile  bitcoin-mine  entrypoint.sh
docker/: .gitignore
docker/validator/: Dockerfile
examples/: Cargo.toml
examples/bank_account/: Cargo.toml  build.rs  caller.json  program.json
examples/bank_account/program/: Cargo.toml
examples/bank_account/program/src/: lib.rs  main.rs  models.rs  processor.rs
examples/bank_account/src/: lib.rs  state.rs
examples/common/: Cargo.toml
examples/common/src/: constants.rs  helper.rs  lib.rs  models.rs
examples/counter/: Cargo.toml  caller.json  program.json
examples/counter/program/: Cargo.toml
examples/counter/program/src/: lib.rs  main.rs
examples/counter/src/: lib.rs
examples/ebpf-counter/: Cargo.toml  caller.json
examples/ebpf-counter/program/: Cargo.toml
examples/ebpf-counter/program/src/: lib.rs
examples/ebpf-counter/src/: counter_deployment.rs  counter_helpers.rs  counter_instructions.rs  errors_and_panics.rs  happy_path.rs  lib.rs
examples/helloworld/: Cargo.toml  caller.json
examples/helloworld/.arch-data/leader/: peer_id
examples/helloworld/.arch-data/leader/testnet/: arch-secret
examples/helloworld/.arch-data/leader/testnet/ledger/: IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
examples/helloworld/.arch_data/testnet/ledger/: IDENTITY  LOG
examples/helloworld/program/: Cargo.toml
examples/helloworld/program/src/: lib.rs  main.rs
examples/helloworld/src/: lib.rs
examples/liquiditypool/: Cargo.toml
examples/liquiditypool/program/: Cargo.toml
examples/liquiditypool/program/src/: lib.rs
examples/liquiditypool/src/: lib.rs
examples/oracle/: Cargo.toml  program.json
examples/oracle/program/: Cargo.toml
examples/oracle/program/src/: lib.rs
examples/oracle/src/: lib.rs
examples/swap/: Cargo.toml  caller.json  program.json
examples/swap/program/: Cargo.toml
examples/swap/program/src/: curve.rs  dca.rs  errors.rs  instruction.rs  lib.rs  limit_order.rs  mod.rs  operations.rs  reward.rs  state.rs  tests.rs  trading_routes.rs  vault.rs  vault_operations.rs
examples/swap/src/: lib.rs
init/: Dockerfile  init.sh
program/: Cargo.toml
program/src/: account.rs  debug_account_data.rs  entrypoint.rs  helper.rs  input_to_sign.rs  instruction.rs  lib.rs  log.rs  message.rs  program.rs  program_error.rs  pubkey.rs  sanitized.rs  system_instruction.rs  transaction_to_sign.rs  utxo.rs
program/src/stable_layout/: mod.rs  stable_ins.rs  stable_vec.rs
program/src/syscalls/: definitions.rs  mod.rs
sdk/: Cargo.toml
sdk/src/: entrypoint.rs  instruction.rs  lib.rs  message.rs  processed_transaction.rs  pubkey.rs  runtime_transaction.rs  signature.rs  syscalls.rs  transaction_to_sign.rs  utxo.rs
