[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
sha256 = "1.5.0"
borsh = { version = "1.4.0", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
hex = "0.4.3"
anyhow = { version = "1", features = ["backtrace"] }
serde_json = "1.0.116"
bitcoin = { git = "https://github.com/Arch-Network/bitcoin-arch-v2" }
risc0-zkvm = { version = "0.21.0" }

[target.'cfg(not(target_os = "zkvm"))'.dependencies]
bitcoincore-rpc = "0.18.0"
