[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
arch_program = { path = "../program" }

borsh = { version = "1.4.0", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
sha256 = "1.5.0"
anyhow = { version = "1", features = ["backtrace"] }
hex = { version = "0.4.3", default-features = false }
