[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
arch_program = { path = "../../program" }

bitcoincore-rpc = "0.18.0"
hex = "0.4.3"
borsh = { version = "1.4.0", features = ["derive"] }
bitcoin = { version = "0.31.0", features = ["serde", "rand"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
serial_test = "3.1.1"
