[workspace]
[package]
name = "bank_account_program"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch_program = { path = "../../../program" }
borsh = { version = "1.5.1", features = ["derive"] }
bitcoin = { git = "https://github.com/Arch-Network/bitcoin-arch-v2" }

[lib]
crate-type = ["cdylib", "lib"] 
